@@ -147,7 +147,7 @@ public class NormaliseTable extends WrapperStarTable {
                         return value;
                     }
                     else if ( value instanceof Number ) {
-                        return new Double( ((Number) value).doubleValue() );
+                        return Double.valueOf( ((Number) value).doubleValue() );
                     }
                     else {
                         return null;
