@@ -98,10 +98,12 @@ public class StiltsDialog extends AuxDialog {
                                          LineEnder.BACKSLASH );
         indentSelector_ =
             new MenuSelector<Integer>( "Indent", new Integer[] {
-                new Integer( 0 ), new Integer( 1 ), new Integer( 2 ),
-                new Integer( 3 ), new Integer( 4 ), new Integer( 5 ),
-                new Integer( 6 ), new Integer( 7 ), new Integer( 8 ),
-            }, new Integer( 3 ) );
+                Integer.valueOf( 0 ), Integer.valueOf( 1 ),
+                Integer.valueOf( 2 ), Integer.valueOf( 3 ),
+                Integer.valueOf( 4 ), Integer.valueOf( 5 ),
+                Integer.valueOf( 6 ), Integer.valueOf( 7 ),
+                Integer.valueOf( 8 ),
+            }, Integer.valueOf( 3 ) );
 
         /* Ensure that the StiltsMonitor is kept updated with the
          * configured formatter. */
